buildscript {
    repositories {
        jcenter()
    }

    dependencies {
        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7'
    }
}

apply plugin: 'java'
apply from: file("properties.gradle")
apply from: file("publishing.gradle")

repositories {
    jcenter()
}

dependencies {
    compile 'com.squareup.okhttp3:okhttp:3.5.0'
    compile 'com.google.code.gson:gson:2.8.0'

    compile 'io.reactivex:rxjava:1.1.6'

    testCompile 'junit:junit:4.12'
    testCompile 'org.mockito:mockito-all:1.10.19'
}

sourceCompatibility = JavaVersion.VERSION_1_8
targetCompatibility = JavaVersion.VERSION_1_8

task(runRetrolambda, type: JavaExec) {
    main = 'net.orfjackal.retrolambda.Main'
    classpath = files('tools/retrolambda-2.3.0.jar')
    jvmArgs = [
            "-Dretrolambda.inputDir=build/classes/main",
            "-Dretrolambda.classpath=build/classes/main"
    ]
}

test {
    useJUnit {
        excludeCategories 'com.gatebuzz.rapidapi.rx.LiveService'
    }
}

classes.dependsOn runRetrolambda
